force-app/main/default/objects/Loading_Charge__c/Loading_Charge__c.object-meta.xml
<CustomObject>
    <label>Ex Works Charges</label>
    <nameField>
        <label>Ex Works Charge</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ex Works Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>