force-app/main/default/objects/Loading_Charge__c/fields/Pickup_Place__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Place__c</fullName>
    <label>Pickup Place</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>