force-app/main/default/objects/Loading_Charge__c/fields/Place_of_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Pickup</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipName>Loading_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>