force-app/main/default/objects/Loading_Charge__c/fields/Port_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>Loading_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>